# codex-click-chooser-hooks

./: .gitignore  README.ja.md  README.ko.md  README.md  README.zh-CN.md  pyproject.toml
docs/: runtime-contract.md
src/codex_click_chooser_hooks/: cli.py  doctor.py  install.py  merge.py  runtime_paths.py  selftest.py
src/codex_click_chooser_hooks/hooks/: session_start_request_user_input_policy.py  stop_require_request_user_input.py
src/codex_click_chooser_hooks/templates/: hooks.json
src/codex_next_step_hooks/hooks/: stop_require_request_user_input.py
tests/: explanatory_closure_should_request.json  obvious_next_step_should_auto_continue.json  surfaced_clear_next_step_should_auto_continue.json  surfaced_follow_up_choice_should_request.json  test_observe.py  test_policy_text.py  test_transcript_logging.py
tests/fixtures/: explanatory_closure_recent_lane.jsonl  obvious_next_step_recent_lane.jsonl
